[package]
name = "jetstream-oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
atrium-api = { version = "0.24.7", default-features = false, features = ["namespace-appbsky"] }
tokio = { version = "1.41.1", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.24.0", features = ["connect", "native-tls-vendored", "url"] }
futures-util = "0.3.31"
url = "2.5.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
zstd = "0.13.2"
thiserror = "2.0.3"
flume = "0.11.1"
log = "0.4.22"

[dev-dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }