[package]
authors = ["videah <videah@selfish.systems>"]
name = "jetstream-oxide"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Library for easily interacting with and consuming the Bluesky Jetstream service."
repository = "https://github.com/videah/jetstream-oxide"
readme = "README.md"

[dependencies]
async-trait = "0.1.83"
atrium-api = { version = "0.25", default-features = false, features = [
    "namespace-appbsky",
] }
tokio = { version = "1.41.1", features = ["full", "sync", "time"] }
tokio-tungstenite = { version = "0.24.0", features = [
    "connect",
    "native-tls-vendored",
    "url",
] }
futures-util = "0.3.31"
url = "2.5.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
chrono = "0.4.38"
zstd = "0.13.2"
thiserror = "2.0.3"
flume = "0.11.1"
log = "0.4.22"
tokio-util = "0.7.13"

[dev-dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
